==== 2012.6.27 Ver X12.1 ====
 * LiteIDE : LiteIDE use new logo
 * LiteEditor : fold / unfold
 * LiteEditor : color scheme custom selection 
 * LiteEditor : kate go.xml remove linecontinue
 * LiteEditor : goto line
 * LiteApp : fix recent file load bug
 * LiteIDE : update faq document
==== 2012.6.13 Ver X12 1.875 ====
 * LiteIDE : reset resource directory
 * LiteEditor : goto next/prev block
 * LiteEditor : code comment
 * LiteEditor : braces match
 * LiteEditor: LRLF check by \n
 * LiteEditor: no print char conver to .
 * LiteEditor: move tooltip to status
 * GolangFmt : enable gofmt diff
 * GolangFmt : save auto gofmt
 * LiteBuild: project build toolbar and editor build toolbar.
 * LiteFind: add file search
 * PackageBrowser: fast load
==== 2012.5.16 Ver X11 1.71875 beta4.1 ====
 * LiteBuild: fix execute args for gosrc/gopro/makefile
 * LiteApp: add option - when close project auto close project editors
 * PackageBrowser : double click pkg and load project
 * LiteEditor: add option - compelter case sensitive
==== 2012.5.15 Ver X11 1.71875 beta4 ====
 * GolangPackage : enable local package
 * GolangDoc : golang api fmt#Println -> fmt.Println
 * LiteBuild : fix regexp error
 * FileSystem: (windows) fix rename abc to Abc false
 * PackageProject : remove auto reload timer
 * LiteEditor: (linux) redo enable CTRL+Y
==== 2012.5.2 Ver X11 1.71875 beta3 ===
 * GolangPackage : new golang package plugin for GO1
 * GolangPackage : PackageBrowser and PackageProject for GO1
 * GolangTool : remove the plugin
 * GolangDoc: add golang api for GO1
 * GolangDoc: add golang api filter
 * GolangAst: add filter
 * GolangAst: classview and outline
 * LiteEditor : compelter option
 * LiteApp : new file wizard support GO1
 * Welcome : new recent page
 * gopromake : update pkg depend

==== 2012.3.9 Ver X11 1.71875 beta2 ====
 * GolangPlay : new go playground plugin
 * GolangTool : sync editor, sync project

==== 2012.3.1 Ver X11 1.71875 beta1 ====