@@ -9,7 +9,7 @@
 	<div id="container">
 		<div id="topnav">	
 			<h1 id="title" align="center"><img src="liteide128.png" align ="right">Welcome to LiteIDE X</h1>
-<pre>Copyright 2011-2012, Author <a href="mailto:visualfc@gmail.com">visualfc</a>, Version <a href="doc:/CHANGES.TXT">x12.1 (hg557)</a></pre>
+<pre>Copyright 2011-2012, Author <a href="mailto:visualfc@gmail.com">visualfc</a>, Version <a href="doc:/CHANGES.TXT">x12.1 (hg560)</a></pre>
 <pre>Golang Website: <a href="http://golang.org/">http://golang.org/</a>.
 LiteIDE Website: <a href="http://code.google.com/p/golangide">http://code.google.com/p/golangide</a>.
 Golang Manual(CHM): <a href="http://github.com/astaxie/godoc">http://github.com/astaxie/godoc</a>.</pre>
